--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@phosphor-icons/react": "^2.1.7",
+    "@sanity/vision": "^3.70.0",
     "next": "14.2.16",
+    "next-sanity": "^9.8.38",
     "react": "^18",
     "react-dom": "^18",
-    "react-fontawesome": "^1.7.1"
+    "react-fontawesome": "^1.7.1",
+    "sanity": "^3.70.0"
   },
   "devDependencies": {
     "@types/node": "^20",
